dataset1235/2025-2/2318198438/users/1225947802/executions/2601575092_359632665.log
== RUN (2025-08-13 22:25:12)
-- CODE: 
print(250/6(round(41,6666666,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(250/6(round(41,6666666,2)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(250/6(round(41,6666666,2)))
                ^^^^^^^^^^^^^^^^^^^
TypeError: round() takes at most 2 arguments (3 given)
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(250/6(round(41,6666666,2)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(250/6(round(41,6666666,2)))
                ^^^^^^^^^^^^^^^^^^^
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 22:23:30)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 22:45:05)
-- CODE: 
print(250/6)
print(round(41.6666666,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 22:44:07)
-- CODE: 
print(250/6)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 22:25:44)
-- CODE: 
print(250/6(round,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(250/6(round,2))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(250/6(round,2))
              ^^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(250/6(round,2))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(250/6(round,2))
              ^^^^^^^^^^
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 22:25:31)
-- CODE: 
print(250/6(round 41,6666666,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(250/6(round 41,6666666,2))
                ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(250/6(round 41,6666666,2))
                ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 22:45:02)
-- CODE: 
print(250/6)
print(round(41.6666666,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
